[gd_scene load_steps=9 format=3 uid="uid://cyrecdwyl7nsd"]

[ext_resource type="Script" uid="uid://dagur50cvjoxn" path="res://Scenes/Natu's Tests/Enemies/(S)StrongEnemy.gd" id="1_ur136"]
[ext_resource type="Texture2D" uid="uid://godqsckmgsgt" path="res://Assets/Misc/Weapons/spritesheet.png" id="2_ur136"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i5wil"]
size = Vector2(5938.33, 3576.67)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xs0qf"]
size = Vector2(116, 188)

[sub_resource type="AtlasTexture" id="AtlasTexture_j8ffs"]
atlas = ExtResource("2_ur136")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_acoq0"]
atlas = ExtResource("2_ur136")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_qi2p4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j8ffs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_acoq0")
}],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_frgk7"]
size = Vector2(121, 188)

[node name="CharacterBody2D" type="CharacterBody2D"]
scale = Vector2(0.6, 0.6)
script = ExtResource("1_ur136")

[node name="detection_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
position = Vector2(-20, 16.6667)
shape = SubResource("RectangleShape2D_i5wil")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_xs0qf")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0.499996, -1.12499)
scale = Vector2(17, 18.044)
sprite_frames = SubResource("SpriteFrames_qi2p4")
animation = &"new_animation"
frame_progress = 0.893644

[node name="enemy_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy_hitbox"]
shape = SubResource("RectangleShape2D_frgk7")

[node name="take_damage_cooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="do_attack" type="Timer" parent="."]
wait_time = 0.25

[node name="wall_ray_right" type="RayCast2D" parent="."]
target_position = Vector2(83, -70)

[node name="wall_ray_left" type="RayCast2D" parent="."]
target_position = Vector2(-76, -80)

[node name="ground_ray_right" type="RayCast2D" parent="."]
target_position = Vector2(67, 106)

[node name="ground_ray_left" type="RayCast2D" parent="."]
target_position = Vector2(-65, 109)

[node name="jump_cooldown" type="Timer" parent="."]
wait_time = 1.199

[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_entered"]
[connection signal="body_exited" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_exited"]
[connection signal="timeout" from="take_damage_cooldown" to="." method="_on_take_damage_cooldown_timeout"]
[connection signal="timeout" from="do_attack" to="." method="_on_do_attack_timeout"]
[connection signal="timeout" from="jump_cooldown" to="." method="_on_can_jump_timeout"]
